Aug 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- use getopt for command line parameters
- add --launch parameter, syntax subject to modification
- add gametypes and voteflags for Urban Terror 3

Aug 03, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix default ping value when reading server filters

Jul 27, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Support for America's Army. Thanks Florian Riepler for the patch.

Jul 25, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix default ET protocol, now 82. Thanks cjay for not reporting ;-)

Jun 30, 2003: Alex <alex_b@users.sourceforge.net>
- Replaced fr.po with updated version from Francois Perichon

Jun 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix variable declaration to work with older gcc

Jun 19, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Option to stop current song in XMMS when launching a game
- Option to resolve hostnames on update. This way it is possible to display
  hostnames even if they are not automatically resolved. Show hostnames is now
  default on, resolve hostnames off.
- Merge GeoIP branch
- Ability to directly join ut2k3 servers as spectator, even with password
- Server side filtering for Half-Life will be used if you have a server filter
  enabled when clicking update. Currently filtering for game, map, not full and
  not empty will be requested from the server.

Jun 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Display team of player for Q3 mods that provide the necessary information
  (currently osp, truecombat)

Jun 14, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add gametypes for Truecombat 1.0
- compare private_clients case insensitive in q3

Jun 11, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.12.1

Jun 10, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.12

June 09, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Updated French translation
