@@ -1,3 +1,9 @@
+Aug 14, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- detect cheating-death on halflife-servers
+- set variable XQF_SERVER_ANTICHEAT before launching a game when the server
+  requires some anti-cheat software
+- split up stat_next() function to make it more readable
+
 Aug 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - use getopt for command line parameters
 - add --launch parameter, syntax subject to modification
